[gd_scene load_steps=15 format=3 uid="uid://jeisvflnggfs"]

[ext_resource type="Texture2D" uid="uid://tra18r25wvdn" path="res://assets/image/econoverse_main.png" id="1_4qofq"]
[ext_resource type="Theme" uid="uid://cb4jx472vkydf" path="res://scenes/themes/ThemeEconographMain.tres" id="1_i1cyk"]
[ext_resource type="Script" uid="uid://cfleii71n7dvf" path="res://scenes/title_screen.gd" id="2_yikp0"]
[ext_resource type="Shader" uid="uid://c7wggx708ism7" path="res://scenes/starry_sky.gdshader" id="3_25d2p"]
[ext_resource type="Texture2D" uid="uid://cuqxnx6glh2hy" path="res://assets/image/background/190959_00002_.png" id="3_f0wge"]
[ext_resource type="AudioStream" uid="uid://gnxtmixp2q0w" path="res://assets/audio/sfx/sfx_select.ogg" id="5_25d2p"]
[ext_resource type="AudioStream" uid="uid://dsp7uput0vh2q" path="res://assets/audio/music/intro1.ogg" id="6_133ns"]
[ext_resource type="AudioStream" uid="uid://cupiunyi147xp" path="res://assets/audio/ambiance/atm_air_night.ogg" id="8_25d2p"]
[ext_resource type="PackedScene" uid="uid://bdrcd03bq4so4" path="res://scenes/blur.tscn" id="9_2tu13"]
[ext_resource type="PackedScene" uid="uid://14o27b0vk1yx" path="res://scenes/user_backmenus.tscn" id="9_133ns"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_133ns"]
shader = ExtResource("3_25d2p")
shader_parameter/density = 300.0
shader_parameter/layer_parascale = 1
shader_parameter/speedx = 0.1
shader_parameter/speedy = 1.49012e-07
shader_parameter/star_horizontal_wave = 0.0
shader_parameter/star_size = 0.5
shader_parameter/twinkle_effect = 0.5
shader_parameter/twinkle_speed = 0.0
shader_parameter/fbm_strength = 0.02
shader_parameter/fbm_mix = 0.12
shader_parameter/fbm_freq = 4.0
shader_parameter/fbm_amp = 1.5
shader_parameter/fbm_speed = 5.0
shader_parameter/warp_scale = 6.64
shader_parameter/cloud_freq = 8.0
shader_parameter/cloud_amp = 0.02
shader_parameter/cloud_speed = 3.64
shader_parameter/cloud_color_ci1 = 0.7
shader_parameter/cloud_color_ci2 = 0.5
shader_parameter/cloud_color_ci3 = 0.9
shader_parameter/cloud_color_shiftx = 0.0
shader_parameter/cloud_color_shifty = -0.5
shader_parameter/background_color = Color(0.02, 0.04, 0.12, 1)

[sub_resource type="Shader" id="Shader_pavg7"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.4.1.stable.mono's CanvasItemMaterial.

shader_type canvas_item;
render_mode blend_mix;
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e0g7h"]
shader = SubResource("Shader_pavg7")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_133ns"]
blend_mode = 2

[node name="TitleScreen" type="Control" node_paths=PackedStringArray("song_intro", "sfx_select", "amb_air_night", "button_options", "user_backmenus", "TopLayer", "menu_paused", "menu_options", "blur", "BlackOut")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_i1cyk")
script = ExtResource("2_yikp0")
song_intro = NodePath("Intro1")
sfx_select = NodePath("SfxSelect")
amb_air_night = NodePath("AtmAirNight")
button_options = NodePath("Buttons/Button_Options")
user_backmenus = NodePath("TopLayer/UserBackmenus/MenuPaused")
TopLayer = NodePath("TopLayer")
menu_paused = NodePath("TopLayer/UserBackmenus/MenuPaused")
menu_options = NodePath("TopLayer/UserBackmenus/MenuOptions")
blur = NodePath("Blur")
BlackOut = NodePath("BlackOut")

[node name="StarrySky" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_133ns")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -184.0
offset_right = 1594.0
offset_bottom = 1140.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3393, 0.280326)
texture = ExtResource("3_f0wge")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.073, 0.01, 0.258824)

[node name="Icon" type="Control" parent="."]
material = SubResource("ShaderMaterial_e0g7h")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EconoverseMain2" type="Sprite2D" parent="Icon"]
material = SubResource("CanvasItemMaterial_133ns")
position = Vector2(28, -21)
scale = Vector2(2, 2)
texture = ExtResource("1_4qofq")

[node name="EconoverseMain" type="Sprite2D" parent="Icon"]
position = Vector2(30, -20)
scale = Vector2(2, 2)
texture = ExtResource("1_4qofq")

[node name="Buttons" type="HBoxContainer" parent="."]
process_mode = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 4
alignment = 1

[node name="Button_Start" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Click to Start"
flat = true

[node name="spacer" type="Control" parent="Buttons"]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Button_Options" type="Button" parent="Buttons"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Settings"
flat = true

[node name="SfxSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_25d2p")
volume_db = -8.35
pitch_scale = 1.5
bus = &"SFX"

[node name="Intro1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_133ns")
bus = &"Music"

[node name="AtmAirNight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_25d2p")
bus = &"Ambiance"

[node name="Blur" parent="." instance=ExtResource("9_2tu13")]
layout_mode = 1

[node name="TopLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="UserBackmenus" parent="TopLayer" node_paths=PackedStringArray("blur") instance=ExtResource("9_133ns")]
blur = NodePath("../../Blur")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -33.0
offset_right = 102.0
offset_bottom = -10.0
grow_vertical = 0
text = "ESC - Options"

[node name="BlackOut" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="button_down" from="Buttons/Button_Start" to="." method="_on_button_start_button_down"]
[connection signal="finished" from="Intro1" to="." method="_on_intro_1_finished"]

[editable path="TopLayer/UserBackmenus"]
